syntax = "proto3";

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  internal/session/delivery/grpc/session.proto

package protobuf_session;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

option go_package = "/grpc";

message Session {
  string Value = 1;
  uint64 UserId = 2;
  google.protobuf.Duration TimeDuration = 3;
}

message SessionValue {
  string Value = 1;
}

message SessionUserIdValue {
  uint64 Value = 1;
}

service SessionService {
  rpc Create(SessionUserIdValue) returns (Session) {}
  rpc Check(SessionValue) returns (Session) {}
  rpc Delete(SessionValue) returns (google.protobuf.Empty) {}
}


